Fix stratifier validation to work with the new CQL classes.